@@ -6,6 +6,6 @@ import org.springframework.web.server.ResponseStatusException;
 public class EntityNotFoundException extends ResponseStatusException {
     public EntityNotFoundException(Class<?> clazz, Object id) {
         super(HttpStatus.NOT_FOUND,
-                String.format("Entity '%s' with id '%s' wasn't found!", clazz.getSimpleName(), id.toString()));
+                "Entity '%s' with id '%s' wasn't found!".formatted(clazz.getSimpleName(), id.toString()));
     }
 }
